@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #14711: os.stat_float_times() has been deprecated.
+
 - LZMAFile now accepts the modes "rb"/"wb"/"ab" as synonyms of "r"/"w"/"a".
 
 - The bz2 and lzma modules now each contain an open() function, allowing
